@@ -8,7 +8,7 @@ include Cairo
 cr=Context.new(ImageSurface.new(FORMAT_ARGB32, 200,200))
 
 # fill background with white
-cr.set_source_rgba(1.0, 1.0, 1.0)
+cr.set_source_rgba(1.0, 1.0, 1.0, 0.8)
 cr.paint
 
 # create shape
@@ -18,9 +18,9 @@ cr.line_to(150, 150)
 cr.line_to(50, 150)
 cr.close_path
 
-cr.set_source(0.0, 0.0, 0.0)
+cr.set_source_rgb(0.0, 0.0, 0.0)
 cr.fill_preserve
-cr.set_source(1.0, 0.0, 0.0)
+cr.set_source_rgb(1.0, 0.0, 0.0)
 cr.set_line_join(LINE_JOIN_MITER)
 cr.set_line_width(4)
 cr.stroke
